--- a/Study/중간고사.md
+++ b/Study/중간고사.md
@@ -1,135 +1,136 @@
-![image](https://github.com/gryrryfh/Security/assets/50912987/0d18262f-a79e-4eb7-9eb7-48d8fa8fe9bf)1장 : 사이버 범죄와 악성코드  
-Zero-Day 공격: 알려지지 않은 취약점 발견(해커들의 시간)  
-One Day 공격: 발견된 최신 취약점의 패치 발표됨  
-OlDay 공격: 취약점에 대하여 패치가 오래 전에 발표됨  
-악성코드 : 시스템과 네트워크의 정상적인 사용을 저해하는 모든 종류의 코드(바이러스, 웜, 스파이웨어 등) 악성 소프트웨어, 멀웨어라고 함
-악성코드 증상 : 시작페이지변경, 윈도우설정변경, 파일삭제, 변경, 속도저하, 문서열리지않음 등
+1장 : 사이버 범죄와 악성코드    
+Zero-Day 공격: 알려지지 않은 취약점 발견(해커들의 시간)    
+One Day 공격: 발견된 최신 취약점의 패치 발표됨    
+OlDay 공격: 취약점에 대하여 패치가 오래 전에 발표됨    
+악성코드 : 시스템과 네트워크의 정상적인 사용을 저해하는 모든 종류의 코드(바이러스, 웜, 스파이웨어 등) 악성 소프트웨어, 멀웨어라고 함  
+악성코드 증상 : 시작페이지변경, 윈도우설정변경, 파일삭제, 변경, 속도저하, 문서열리지않음 등  
   
-사이버공격 : 2017년의 사이버 공격으로 한국의 손실액은약 77조 원
-사이버공격 전망 : 2019년 22위
-사이버공격 동향 : 랜섬웨어, 암호화폐 악성코드 등 증가
+사이버공격 : 2017년의 사이버 공격으로 한국의 손실액은약 77조 원  
+사이버공격 전망 : 2019년 22위  
+사이버공격 동향 : 랜섬웨어, 암호화폐 악성코드 등 증가  
+  
+사이버범죄 : 피싱, 스미싱, 파밍 등    
+피싱 : 개인정보낚시   
+스미싱 : 문자메시지피싱  
+파밍 : IP 변조  
 
-사이버범죄 : 피싱, 스미싱, 파밍 등
-피싱 : 개인정보낚시
-스미싱 : 문자메시지피싱
-파밍 : IP 변조
+타이포스쿼팅: URL을 교묘하게 바꿔 가짜 사이트 생성  
 
-타이포스쿼팅: URL을 교묘하게 바꿔 가짜 사이트 생성
-
-바이러스 : 다양한 감염경로로 컴퓨터에침입하여 실행 가능한 파일이나 문서 파일 내에 복제되어 기생
-감염된 파일의 실행이나 오픈 시바이러스가 활동하여 컴퓨터에 악의적인피해를 입히거나 자신을 다른 파일에 복제하여 감염시킴
+바이러스 : 다양한 감염경로로 컴퓨터에침입하여 실행 가능한 파일이나 문서 파일 내에 복제되어 기생  
+감염된 파일의 실행이나 오픈 시바이러스가 활동하여 컴퓨터에 악의적인피해를 입히거나 자신을 다른 파일에 복제하여 감염시킴  
    
-실행파일 바이러스 : 국내의 80% 정도가 파일 바이러스로 가장 일반적인 유형  ex) 예루살렘 바이러스
-![image](https://github.com/gryrryfh/Security/assets/50912987/49ab282d-b720-48ca-bb7e-cded385d6de0)
+실행파일 바이러스 : 국내의 80% 정도가 파일 바이러스로 가장 일반적인 유형  ex) 예루살렘 바이러스  
+![image](https://github.com/gryrryfh/Security/assets/50912987/49ab282d-b720-48ca-bb7e-cded385d6de0)  
 
-매크로 바이러스 : MS 워드, 엑셀과 같이 매크로 언어를 지원하는 문서파일에 기생 ex)멜리사, 라룩스
-감염된 문서 파일을 여는 순간 바이러스가 동작 à 감염 대상이 실행파일이 아닌 매크로 기능을 사용하는 문서파일
+매크로 바이러스 : MS 워드, 엑셀과 같이 매크로 언어를 지원하는 문서파일에 기생 ex)멜리사, 라룩스  
+감염된 문서 파일을 여는 순간 바이러스가 동작  감염 대상이 실행파일이 아닌 매크로 기능을 사용하는 문서파일  
 
-스크립트 바이러스 : 스크립트언어로 작성 ex) 러브바이러스
-바이러스가 포함되어 있는 문서의 스크립트가 실행되면서 다른 파일을 감염시킴
-
-바이러스 이름 : CARO 규약에 따라 이름 붙이고 백신 개발 (운영체제/특성명칭/주여변수/보조변수)
-
-웜 : 독립적으로 존재하는 실행 가능한 프로그램 ex) 모리스 웜
-바이러스와 달리 특정 파일을 감염시키는 것이 아니라 웜 자신을 복제하여 배포
-슬래머웜 : MS-SQL 서버의 버퍼 오버플로우 취약점을 이용하여 서버 컴퓨터에 침입하고 자신을무제한 복제하며, 네트워크에 연결된 컴퓨터들의 동일한 취약점을 찾아 공격 10분만에 전세계로 퍼짐
-웜 바이러스 : 공격 대상 컴퓨터에 대한 침투까지는 웜의 방식, 침투가 완료된 이후에는 바이러스 방식으로 감염시킴 요즘 바이러스 형태
-트로이목마 : 악성 루틴이 숨어 있는 프로그램  트로이목마는 바이러스와 같이 자기 복제 기능이 없음 다운로드 파일들에서 나옴 지속적인 정보유출, 제어권 획득
-스파이에어 : 정보의 수집보다는 광고에 주력하는 프로그램으로 사용자에게 불편을 초래
-랜섬웨어 : 시스템을 잠그거나 데이터를 암호화하고이를 인질로 금전을 요구하는 악성 프로그램
-
-백신프로그램 : 악성코드를 찾아서 제거하는 기능을 갖춘 프로그램으로 바이러스, 웜, 트로이목마 등의 다양한 악성코드를 처리 (알약, 네이버 백신, 안랩 등)
-2장 암호 개념과 대칭키 암호시스템
-보안공격 : 수동공격(훔쳐보기), 능동공격(변조, 삽입, 삭제)
-보안서비스 : 기밀성(암호화), 무결성, 인증(전자서명)
-통계적 암호해독 : 영어의 각 문자가 문장 중에서 발생할 확률(에니그마)
+스크립트 바이러스 : 스크립트언어로 작성 ex) 러브바이러스  
+바이러스가 포함되어 있는 문서의 스크립트가 실행되면서 다른 파일을 감염시킴    
   
-수동암호 시대 : ~1920 (치환암호, 전치 암호)
-치환암호(단일문자) : abcd == efgh
-치환암호(다중문자) : abcd == egjn 좀더 복잡함
-전치암호 : 전치테이블을 이용해 문장 내의 문자 위치 재배열
-![image](https://github.com/gryrryfh/Security/assets/50912987/78eaed91-4c96-43cb-b76e-28419fd548b0)
-
-기계암호 시대 : 1920~1950 (에니그마, 하겔린)
-컴퓨터시대 암호 : 1950~ (대칭키 암호 시스템, 비대칭키 암호 시스템=공개키암호시스템)
-대칭키 암호 시스템(암호화와 복호화에 동일한 키 사용)
-비대칭키 암호시스템=공개키암호시스템(송신자는 수신자의 공개키로 평문을 암호화 수신자는 자신의 개인키로 암호문을 복호화)
-
-Feistel 암호 : 최초의 암호 시스템(1973)
-2번 이상의 기본대치 및 순열치환(permutation)을 연속적으로 수행
-일반적으로 Feistel 연산은 짝수 라운드(DES에서는 16라운드) 적용
-키를 각 라운드에서 사용되는 서브키로 변환하는 키 스케줄 알고리즘 활용
-라운드 함수에 관계없이 역변환이 가능(암/복호화 과정이 같음)
-
-데이터암호화 표준(DES)
-56 비트의 키를 이용하는 대칭키 암호 시스템-l 데이터를 64비트 단위의 블록으로 분할 후, 순열, 배타적 OR, 회전 등으로 변경
+바이러스 이름 : CARO 규약에 따라 이름 붙이고 백신 개발 (운영체제/특성명칭/주여변수/보조변수)  
   
-DES 기본연산
-순환 : 비트를 왼쪽이나 오른쪽으로 회전
-순열 : 비트 레벨의 치환
-![image](https://github.com/gryrryfh/Security/assets/50912987/bf17d651-2cd5-4e0a-a276-98719747e355)
+웜 : 독립적으로 존재하는 실행 가능한 프로그램 ex) 모리스 웜  
+바이러스와 달리 특정 파일을 감염시키는 것이 아니라 웜 자신을 복제하여 배포  
+슬래머웜 : MS-SQL 서버의 버퍼 오버플로우 취약점을 이용하여 서버 컴퓨터에 침입하고 자신을무제한 복제하며, 네트워크에 연결된 컴퓨터들의 동일한 취약점을 찾아 공격 10분만에 전세계로 퍼짐  
+웜 바이러스 : 공격 대상 컴퓨터에 대한 침투까지는 웜의 방식, 침투가 완료된 이후에는 바이러스 방식으로 감염시킴 요즘 바이러스 형태  
+트로이목마 : 악성 루틴이 숨어 있는 프로그램  트로이목마는 바이러스와 같이 자기 복제 기능이 없음 다운로드 파일들에서 나옴 지속적인 정보유출, 제어권 획득  
+스파이에어 : 정보의 수집보다는 광고에 주력하는 프로그램으로 사용자에게 불편을 초래  
+랜섬웨어 : 시스템을 잠그거나 데이터를 암호화하고이를 인질로 금전을 요구하는 악성 프로그램  
 
-DES-암호화
-초기 치환 : 64비트 평문에 있는 각 비트의 위치를 바꿈  
+백신프로그램 : 악성코드를 찾아서 제거하는 기능을 갖춘 프로그램으로 바이러스, 웜, 트로이목마 등의 다양한 악성코드를 처리 (알약, 네이버 백신, 안랩 등)  
+2장 암호 개념과 대칭키 암호시스템  
+보안공격 : 수동공격(훔쳐보기), 능동공격(변조, 삽입, 삭제)  
+보안서비스 : 기밀성(암호화), 무결성, 인증(전자서명)  
+통계적 암호해독 : 영어의 각 문자가 문장 중에서 발생할 확률(에니그마)  
   
-서브키생성 : 동일한 절차를 수행하나 서로 다른 서브키 사용
-56비트키를 28비트 2개로 나누고 각각 좌순환, 결합 56비트 나옴 -> 압축순열로 48비트로 됨 이게 서브키1
-결합한 56비트를 2개로 나누고 각각 또 좌순환하고 압축순열로 48비트로 됨 이게 서브키2 이걸 16까지 반복
-64비트 입력을 32비트로 나누어서 위치를 교체
-64비트를 32비트 2개로 나눔 하나(R i-1, L i)는 다음단계로 또 하나(L i-1)는 (R i-1)을 확장순열하고 이것저것 함수한거랑 xor한 (R i)로 됨 이걸 반복
-위에 쓸 함수 : 32비트를 48비트로 확장하고 서브키랑 xor 그다음 s박스로 32비트를 만들고 일대일 순열하고 (l i-1)랑 xor하면 (R i)가 된다
-s박스 : 비트의 앞뒤가 행 가운데가 열 행열을 찾아 그 값을 출력
-s박스의 대체 : 혼동
-치호나 테이블 : 확산
-이전단계 출력인 64비트의 각 비트 위치를 바꿈
+수동암호 시대 : ~1920 (치환암호, 전치 암호)    
+치환암호(단일문자) : abcd == efgh  
+치환암호(다중문자) : abcd == egjn 좀더 복잡함  
+전치암호 : 전치테이블을 이용해 문장 내의 문자 위치 재배열  
+![image](https://github.com/gryrryfh/Security/assets/50912987/78eaed91-4c96-43cb-b76e-28419fd548b0)  
+   
+기계암호 시대 : 1920~1950 (에니그마, 하겔린)  
+컴퓨터시대 암호 : 1950~ (대칭키 암호 시스템, 비대칭키 암호 시스템=공개키암호시스템)  
+대칭키 암호 시스템(암호화와 복호화에 동일한 키 사용)  
+비대칭키 암호시스템=공개키암호시스템(송신자는 수신자의 공개키로 평문을 암호화 수신자는 자신의 개인키로 암호문을 복호화)  
 
-복호화(역초기치환) : 서브키를 역으로 수행(암호할땐 1~16순서면 복호화할댄 16~1로 진행) 서브키 생성은 같은방법
+Feistel 암호 : 최초의 암호 시스템(1973)  
+2번 이상의 기본대치 및 순열치환(permutation)을 연속적으로 수행  
+일반적으로 Feistel 연산은 짝수 라운드(DES에서는 16라운드) 적용  
+키를 각 라운드에서 사용되는 서브키로 변환하는 키 스케줄 알고리즘 활용  
+라운드 함수에 관계없이 역변환이 가능(암/복호화 과정이 같음)  
 
-DES 취약점 
-56비트가 안정성 문제(1997년 7만대 컴퓨터로 des키를 찾음, 99년에 22시간만에 키가 깨짐)
-그 후 3중 DES를 국가표준으로 채택(2030년까지 사용 가능) 안전, 대칭키중에선 가장 안전
-
-DES키 3개를 사용  평문을 des1로 암호화, 그 암호화한걸 des2로 복호화, 그걸 des3로 암호화 (복호화는 반대)
-높은 보안의 경우 des1,2,3는 모두 다른 키, 일반적인 경우에는 k1, k3는 동일한 키 사용
-
-SEED : 128비트 암호 알고리즘(웹브라우저 플러그인으로 배포) 이것도 fiestel 16라운드 네트워크
-
-블록 암호화 모드 : 특정 비트 수의 집합을 한번에 처리하는 암호 알고리즘 ex) DES, 3중 des, AES
-ECB모드 : 1대1 관계 취약
-CBC모드 : 초기백터를 이용해 복잡해짐 IPSEC통신에서 사용
-![image](https://github.com/gryrryfh/Security/assets/50912987/6d432742-427c-4722-b889-95d1ed1af27a)
-
-연산량 많음
-
-3장 AES와 공개키 암호시스템
+데이터암호화 표준(DES)  
+56 비트의 키를 이용하는 대칭키 암호 시스템-l 데이터를 64비트 단위의 블록으로 분할 후, 순열, 배타적 OR, 회전 등으로 변경  
   
-AES(진화된 암호화 표준)==공개키 암호시스템 ex)온라인뱅킹, 전자상거래
-diffie-hellman : 공개키 교환, 비밀키가 동일해짐(중간 공격자의 공격에 취약) 
-AES 요구사항
-형태 : 대칭키 블록 암호 알고리즘
-효율성 : 삼중 DES보다 좋을 것
-비용 : 무료
-안전성 : 최소 128비트, 256비트 등등
+DES 기본연산  
+순환 : 비트를 왼쪽이나 오른쪽으로 회전  
+순열 : 비트 레벨의 치환  
+![image](https://github.com/gryrryfh/Security/assets/50912987/bf17d651-2cd5-4e0a-a276-98719747e355)  
 
-과정 : 평문(128비트)를 암호키(128비트)와 xor
+DES-암호화  
+초기 치환 : 64비트 평문에 있는 각 비트의 위치를 바꿈    
+  
+서브키생성 : 동일한 절차를 수행하나 서로 다른 서브키 사용  
+56비트키를 28비트 2개로 나누고 각각 좌순환, 결합 56비트 나옴 -> 압축순열로 48비트로 됨 이게 서브키1  
+결합한 56비트를 2개로 나누고 각각 또 좌순환하고 압축순열로 48비트로 됨 이게 서브키2 이걸 16까지 반복  
+64비트 입력을 32비트로 나누어서 위치를 교체  
+64비트를 32비트 2개로 나눔 하나(R i-1, L i)는 다음단계로 또 하나(L i-1)는 (R i-1)을 확장순열하고 이것저것 함수한거랑 xor한 (R i)로 됨 이걸 반복  
+위에 쓸 함수 : 32비트를 48비트로 확장하고 서브키랑 xor 그다음 s박스로 32비트를 만들고 일대일 순열하고 (l i-1)랑 xor하면 (R i)가 된다  
+s박스 : 비트의 앞뒤가 행 가운데가 열 행열을 찾아 그 값을 출력  
+s박스의 대체 : 혼동  
+치호나 테이블 : 확산  
+이전단계 출력인 64비트의 각 비트 위치를 바꿈  
 
-블록 : 128비트 입력,출력
-스테이트 : 128, 256비트 입력, 출력물을 4*4 이차원행렬로 표현
-shift row == 각행위 수만큼 왼쪽으로 이동
-Inv shift row== 복호화할때 쓰고 각 행위 수만큼 오른쪽으로 이동
-Mix column : 각 열을 상수 행렬과 곱하고 XOR (2의 8승을 넘으면 특정수랑 xor)
-Inv Mix column : 믹스컬럼의 역순
-Add Roundkey : 스테이트 입력값과 라운드 키의 xor
-라운드 키 생성구조 : Wi = Wi-1 xor Wi-4 단 i가 4의 배수면 wi = ti xor wi-4
-ti = wi-1을 1바이트 왼쪽 회전하고 각 바이트를 sbox로 대치하고 RCon i/4
+복호화(역초기치환) : 서브키를 역으로 수행(암호할땐 1~16순서면 복호화할댄 16~1로 진행) 서브키 생성은 같은방법  
 
-암호화 : subbyte, shift row, mix column, add round key를 10번 수행
-
-장점 : 병열연산 가능(효율적)
-단점 : 역함수 필요
-
-
-4장
-5장
-6장
-7장
+DES 취약점   
+56비트가 안정성 문제(1997년 7만대 컴퓨터로 des키를 찾음, 99년에 22시간만에 키가 깨짐)  
+그 후 3중 DES를 국가표준으로 채택(2030년까지 사용 가능) 안전, 대칭키중에선 가장 안전  
+  
+DES키 3개를 사용  평문을 des1로 암호화, 그 암호화한걸 des2로 복호화, 그걸 des3로 암호화 (복호화는 반대)  
+높은 보안의 경우 des1,2,3는 모두 다른 키, 일반적인 경우에는 k1, k3는 동일한 키 사용  
+  
+SEED : 128비트 암호 알고리즘(웹브라우저 플러그인으로 배포) 이것도 fiestel 16라운드 네트워크  
+  
+블록 암호화 모드 : 특정 비트 수의 집합을 한번에 처리하는 암호 알고리즘 ex) DES, 3중 des, AES  
+ECB모드 : 1대1 관계 취약  
+CBC모드 : 초기백터를 이용해 복잡해짐 IPSEC통신에서 사용  
+![image](https://github.com/gryrryfh/Security/assets/50912987/6d432742-427c-4722-b889-95d1ed1af27a)  
+  
+연산량 많음  
+  
+3장 AES와 공개키 암호시스템  
+    
+AES(진화된 암호화 표준)==공개키 암호시스템 ex)온라인뱅킹, 전자상거래  
+diffie-hellman : 공개키 교환, 비밀키가 동일해짐(중간 공격자의 공격에 취약)   
+AES 요구사항   
+형태 : 대칭키 블록 암호 알고리즘   
+효율성 : 삼중 DES보다 좋을 것  
+비용 : 무료  
+안전성 : 최소 128비트, 256비트 등등  
+  
+과정 : 평문(128비트)를 암호키(128비트)와 xor  
+  
+블록 : 128비트 입력,출력   
+스테이트 : 128, 256비트 입력, 출력물을 4*4 이차원행렬로 표현   
+shift row == 각행위 수만큼 왼쪽으로 이동  
+Inv shift row== 복호화할때 쓰고 각 행위 수만큼 오른쪽으로 이동  
+Mix column : 각 열을 상수 행렬과 곱하고 XOR (2의 8승을 넘으면 특정수랑 xor)  
+Inv Mix column : 믹스컬럼의 역순  
+Add Roundkey : 스테이트 입력값과 라운드 키의 xor  
+라운드 키 생성구조 : Wi = Wi-1 xor Wi-4 단 i가 4의 배수면 wi = ti xor wi-4  
+ti = wi-1을 1바이트 왼쪽 회전하고 각 바이트를 sbox로 대치하고 RCon i/4  
+  
+암호화 : subbyte, shift row, mix column, add round key를 10번 수행  
+  
+장점 : 병열연산 가능(효율적)  
+단점 : 역함수 필요  
+  
+  
+4장  
+5장  
+6장  
+7장  
+  
