--- a/Study/중간고사.md
+++ b/Study/중간고사.md
@@ -252,8 +252,24 @@ x.509 신뢰모델 : 계층적 신뢰 사용
 
 
 ## 6장 인터넷 보안 프로토콜
-인터넷 프로토콜의 보안 취약성 : 처음엔 보안이 중요하지 않았음
-오류체크를 위한 헤더검사합(checksum) 너무 쉽게 계산이 된다
-그래서 보안프로토콜 개발(ipv6와 연계해서 1995년에 개발)
-7장  
+인터넷 프로토콜의 보안 취약성 : 처음엔 보안이 중요하지 않았음  
+오류체크를 위한 헤더검사합(checksum) 너무 쉽게 계산이 된다  
+그래서 보안프로토콜 개발(ipv6와 연계해서 1995년에 개발)  
+96년에 tls를 표준화로 만듬  
+보안서비스 : 무결성, 인증기능, 위조, 기밀성, 재전송 감지 폐기  
+ip보안 프로토콜 : 키관리프로토콜, 인증헤더프로토콜, 캡슐화 보안페이로드, ip압축프로토콜  
+보안연계(security association) : 보안연계 설정, 해제 기능 
+보안연계 운영모드 
+트랜스포트모드 : 발신지ab, 수신지 a,b
+터널모드 : ipsec이 적용되지 않은 게이트웨이들 사이에  작용
+esp프로토콜 : 대칭키 암호 알고리즘(기밀성, 인증, 무결성, 재전송 폐기)
+터널모드는 많은 대역폭을 사용한다, 
+ah는 ip를 바꾸면 바꾸는데 (높은수준 인증)
+esp는 
+복호화 : 인증 다음에 복호화
+암호화 : 복호화 다음에 인증
+
+## 7장  ISAKMP
+ISAKMP 보안연계 혐상 수립 수정의 절차, 패킷 형식 정의
+협상단계 : 보안연계 수립
   
