--- a/Study/기말고사.md
+++ b/Study/기말고사.md
@@ -5,8 +5,35 @@
 스캐닝(정보를 획득하는것(핑, tcp, udp등))
 스캐닝 안에 스니핑, 트로이목마, 스푸핑, 디도스공격
 
-스캐닝 
+### 스캐닝 (스니핑, 트로이목마, 스푸핑)
+공격 대상 시스템의 존재 및 작동여부, 취약점을 파악하는 방법  
+ping udp,tcp 등     
+nmap, shodan툴을 이용한 스캐닝  
+해킹할때 정보 확인(시스템, 작동 여부 등)  
+ping 스캐닝 : ping을 확인(64, 255면 유닉스, 리눅스 계열, 125 근처면 윈도우) 최근에는 다 막아놨음  
+udp 스캐닝(비연결형) : 응용계층의 포트번호를 스캔(snmp가 활성화되있지 않으면 unreachable패킷 리턴, 열린경우 응답 없음)  
+tcp(open) 스캐닝(연결형) : 헤더 6비트에 syn비트를 보내면 ack를 받고 ack를 다시 보내는데 이때 시스템이 닫혀있으면 rst+ack를 보냄 하지만 로그데이터에 남음  
+half open 스캐닝 : 열려있으면 ack를 보내는데 이때 ack를 안보내고 rst를 보내면 로그데이터가 안남음  
+스텔스 스캐닝 : 흔적이 남지 않는 스캐닝 방법   
+fin, null, xmas(6비트를 1로 세팅) 이걸 보내면 의미가 없음-응답 없으면 살아있는 시스템  
+rst가 오면 닫힘상태다.  
 
-스니핑
-스푸핑
+스캐닝 도구 Nmap  
+scan-특정 ip에 대해 스캔하기를 하면 여러 정보를 알려줌  
+intense scan을 하면 상세한 정보 검색가능  
+ping scan : nmap-sn ip주소  
+로컬네트워크냐 외부네트워크냐에 따라 다르다  
+로컬 네트워크는 arp패킷을 전송, 외부 네트워크면 icmp echo request 등을 전송  
+
+
+### 스니핑
+네트워크 데이터를 훔쳐보는 행위
+ip카메라 스니핑
+
+### 스푸핑
+
+공격을 위해 ip 주소, 메시지의 내용을 위,변조
+수신자의 시스템 장애, 데이터 손실 일으킴
+스머프공격 land ddos공격
+
 서비스거부 공격
