--- a/Study/기말고사.md
+++ b/Study/기말고사.md
@@ -1,39 +1,297 @@
-7장은 나중에 하고
-8장부터 14장까지
-
-## 8장
+# 9장
 스캐닝(정보를 획득하는것(핑, tcp, udp등))
 스캐닝 안에 스니핑, 트로이목마, 스푸핑, 디도스공격
 
-### 스캐닝 (스니핑, 트로이목마, 스푸핑)
+## 스캐닝 (스니핑, 트로이목마, 스푸핑)
 공격 대상 시스템의 존재 및 작동여부, 취약점을 파악하는 방법  
 ping udp,tcp 등     
 nmap, shodan툴을 이용한 스캐닝  
 해킹할때 정보 확인(시스템, 작동 여부 등)  
-ping 스캐닝 : ping을 확인(64, 255면 유닉스, 리눅스 계열, 125 근처면 윈도우) 최근에는 다 막아놨음  
-udp 스캐닝(비연결형) : 응용계층의 포트번호를 스캔(snmp가 활성화되있지 않으면 unreachable패킷 리턴, 열린경우 응답 없음)  
-tcp(open) 스캐닝(연결형) : 헤더 6비트에 syn비트를 보내면 ack를 받고 ack를 다시 보내는데 이때 시스템이 닫혀있으면 rst+ack를 보냄 하지만 로그데이터에 남음  
-half open 스캐닝 : 열려있으면 ack를 보내는데 이때 ack를 안보내고 rst를 보내면 로그데이터가 안남음  
-스텔스 스캐닝 : 흔적이 남지 않는 스캐닝 방법   
+### ping 스캐닝 : ping을 확인(64, 255면 유닉스, 리눅스 계열, 125 근처면 윈도우) 최근에는 다 막아놨음  
+### udp 스캐닝(비연결형) : 응용계층의 포트번호를 스캔(snmp가 활성화되있지 않으면 unreachable패킷 리턴, 열린경우 응답 없음)  
+### tcp(open) 스캐닝(연결형) : 헤더 6비트에 syn비트를 보내면 ack를 받고 ack를 다시 보내는데 이때 시스템이 닫혀있으면 rst+ack를 보냄 하지만 로그데이터에 남음  
+### half open 스캐닝 : 열려있으면 ack를 보내는데 이때 ack를 안보내고 rst를 보내면 로그데이터가 안남음  
+### 스텔스 스캐닝 : 흔적이 남지 않는 스캐닝 방법   
 fin, null, xmas(6비트를 1로 세팅) 이걸 보내면 의미가 없음-응답 없으면 살아있는 시스템  
 rst가 오면 닫힘상태다.  
 
-스캐닝 도구 Nmap  
+스캐닝 도구 Nmap, Shodan
+### Nmap
 scan-특정 ip에 대해 스캔하기를 하면 여러 정보를 알려줌  
 intense scan을 하면 상세한 정보 검색가능  
 ping scan : nmap-sn ip주소  
 로컬네트워크냐 외부네트워크냐에 따라 다르다  
 로컬 네트워크는 arp패킷을 전송, 외부 네트워크면 icmp echo request 등을 전송  
 
+### Shodan 검색엔진
+서버, 라우터, 카메라 및 각종 디바이스를 찾아주는 검색엔진
 
-### 스니핑
+## 스니핑
 네트워크 데이터를 훔쳐보는 행위
-ip카메라 스니핑
+프러미스큐어스 모드를 이용하여 스니핑 수행
+### wireshark : 패킷 모니터링 및 프로토콜 분석기 , npcap도 같이 실행됨
+1. 옵션-인터페이스 선택-필터선택(프로미스큐어스인가 어느 포트인가 등)-캡쳐-종료
+이러면 트래픽을 알 수 있음 여러 정보들을 알수 있음(ip, host ip주소, src net ip주소, dst net ip주소, 등)
+이렇게 캡쳐한거 출력도 가능(다양한 기능으로) 텔넷으로 id, pw등도 스니핑 가능
+ip카메라를 해킹해 2018년 실제 해킹을 했다
+2019년부터 kc인증 규정 의무화, 미국은 중국꺼 안쓰는걸 2018년부터
 
-### 스푸핑
+## 스푸핑
 
 공격을 위해 ip 주소, 메시지의 내용을 위,변조
-수신자의 시스템 장애, 데이터 손실 일으킴
-스머프공격 land ddos공격
+수신자의 시스템 장애, 데이터 손실 일으킴 ip헤더 
 
-서비스거부 공격
+### 스머프공격 : ping을 이용한 공격
+위조된 주소로 ping을 줘서 공격받는 대상이 많은 핑으로 시스템의 부하증가(지금은 대부분 막힘)
+land ddos 공격
+### 동일 포트를 갖는 패킷 공격 : 공격자가  특정 메시지를 보냄(echo패킷으로) udp헤더의 발신 및 목적 포트를 동일하게 지정하면 네트워크 과부화
+### LAND 공격 : 발신지와 목적지 주소 및 포트 번호를 모두 피해 호스트의 주소로 변조-> syn 패킷 루프 발생(현재는 대부분 막힘)
+### TearDrop공격 : 분할 패킷의 취약점을 이용, 수신측이 시스템을 재조립할 때 시스템을 오류나게 함(지금 대부분 막힘)
+### TCP SYN플러딩 : 3way handshaking 동시다발적으로 많은 요청을 보냄-> ack를 보내고 ack를 기다리는데 안옴(받을때까지 대기) 대기큐가 가득차고 오버플로우 발생 -> 서비스거부 상태가 됨
+### DNS 스푸핑(파밍) : 특정 도메인네임의 ip주소를 유령 사이트로 변조 -위조된 사이트에 접속하는 것(은행 등)ㅁ
+### ARP 스푸핑 : ARP == 32비트 ip주소를 48비트 물리주소로 대응시켜주는 프로토콜
+공격자는 공격 대상 시스템의 물리주소를 공격자 자신의 물리주소로 위장, 공격자는 패킷을 수신하고 정보를 훔칠 수 있다, 
+실제 목적지로 패킷을 전달하여 스푸핑 및 스니핑을 은닉
+스위치 기술에서는 arp 스푸핑을 이용하여 스니핑
+
+## 서비스거부 공격 : dos 공격
+좀비pc들이 대상서버에게 과도한 트래픽을 부여, 라우터, 서버 등 많은 것들이 과부화, 서비스를 못하게 함
+분산 서비스 거부 공격 : ddos
+
+이렇게 공격을 하면 cpu사용량 급격히 증가, 네트워크 폭주
+
+
+
+
+# 10장
+DDOS, DRDos, 봇넷
+ddos 실제 사례 : 악성코드가 pc들을 좀비pc로 만듬, 피해 사이트에게 공격을 하여 서버 접속이 안됨
+## 분산서비스거부공격(DDOS) :  분산도니 좀비들에 의해 시스템 자원을 모두 사용하거나 파괴
+좀비 pc 확인 : 백신 프로그램, 관리자권한-cmd, netstat -nb(외부 주소 및 포트번호 확인)
+
+maria 악성코드 : 공장 출하시 설정된 id, 비번을 쓰는 iot기기 감염,(봇넷)으로 만듬 dyn의 dns서버 다운
+## 공격동향
+2014년 상반기 100gbps 100건 이상 250gbps도 생김
+2018년에는 큰 규모의 보안공격 많이 발생
+인터넷 트래픽 비율과 같이 ddos공격도 증가
+2018년 이후 ddos부스터 사이트 폐쇠 후 공격 크게 감소
+digital attack map : 전세계 ddos공격 실시간 데이터 시각화
+DRDos : 좀비pc 없이 정상적인 서비스의 응답 패킷으로 과부하를 생성하여 공격
+공격자가 정상 서버를 활용해 특정 서버 마스터에게 공격을 내려 그 아래 에이전트가 공격대상을 직접 공격을 함(수많은 syn/ack를 받아 다운)
+멤캐시드 서버: 캐시를 저장하고 인증과정을 두지 않는다. 그런데 인터넷에 노출이 되어 대규모 공격이 진행됨
+
+## 막는 방법 
+서비스 형 : CDN, 스크러빙 센터 등 클라우드 환경을 이용해 대응(대규모 디도스 공격을 막는데 유리, 소량 정밀엔 취약)
+어플라이언스 형 : 디도스 전용 장비 설치(대규모 공격에는 한계가 있다)
+여러 보안업체(arbor, imperva, radware)외 여러 기업들이 활동 한국엔 안랩, 윈스, 시큐아이, KINX 등
+ddos 공격이 발견되면 스크러빙 센터로 우회하고 공격은 거른다
+
+## 봇넷 : 로봇 네트워크(악성 소프트웨어에 감염된 봇 좀비기기)
+명령을 내리면 좀비기기들이 여러 공격을 함 6억개중에 1.5억개가 감염되어있음
+forbot, pbot, toxbot, machbot, phpbot 등이 있음 한국이 봇넷 감염지로 선호
+봇넷의 진화 : IRC기반 봇넷(rbot), http기반의 봇넷(Robax) (중앙집중형) 보편적이지만 발견이 잘 된다, 
+p2p 기반 봇넷(storm) 분산형 명령, 제어방식, Tor기반 봇넷
+
+## 망분리 : 물리적 망분리, 논리적 망분리
+물리망분리 : pc 2대 : 높은 수준의 보안 제공(고비용, 관리부담 증가)
+논리망분리 : pc 1대 그 안에 독립된 네트워크 사용(해킹 위협을 서버팜에서 차단)
+금융권은 2015~2016년까지 망분리
+대형은행은 논리적 망분리, 지방 작은은행 등은 물리적 망분리, 국책은행은 물리적 망분리
+
+## 네트워크 보안구성 : 웹 방화벽->인터넷 및 서버 망의 방화벽->침입방지시스템->anti-ddos
+웹 방화벽 : http, https요청이 있는 응용계층에서 동작(비정상 url 차단) apaches는 modesecurity, 윈도우는 webknight
+인터넷 및 서버 망의 방화벽 : 계층 3,4에서 동작, 방화벽을 구추갛여서 외부, dmz(내부 네트워크로 접근 불가, 내부사용자는 사용 가능), 내부 망의 보안 도메인을 분리 및 접근 제어
+
+## 방화벽
+메시지의 정보를 확인 후 차단, 전달 여부 결정하는 장치
+## 동작방식에 따라
+### 패킷 필터링 방화벽 : 3,4계층에서 동작(내부 데이터는 분석 불가) 2개 이상의 접근규칙 필요, 특정 서비스만 차단-나머지만 허용하는 정책
+### 응용 게이트웨이 방화벽 : 응용계층에서 동작(웹 트래픽, 이메일 악성 코드 등 세선에 대한 정보를 추적 가능) 세세하게 분석 가능(하지만 미리 정의된 응용만 수용 가능)
+### 스테이트풀 인스펙션 방화벽 : 3,4 계층에서 동작(변화를 동적으로 대응) 새로운 정책을 만들어 효과적으로 대응 가능
+### 하이브리드 게이트웨이 방화벽 : 패킷 필터링과 응용 게이트웨이 방식의 장점을 취하여 결합(요즘은 이거 다 슨다)
+
+## 구조에 따른 방화벽 유형
+### 스크리닝 라우터 : 계층 3,4에서 동작, 내용을 분석하고 나머지는 차단
+### 단일 홈 베스천 : 방화벽의 기본적인 기능을 수행, 운영체제에 설치되어 운용됨
+### 이중 홈 베스천(Dual homed Gateway) : 네트워크 카드가 2개가 있어 내부망과 외부망를 물리적으로 분리
+### 스크린된 호스트 게이트웨이 : 인터넷과 내부네트워크 사이에 라우터와 베스천 호스트를 둔 것
+### 스크린도니 서브네트 게이트웨이 : 스크리닝 라우터 2개와 그 사이 이중 홈 베스천 : 프록시 서버 역할, 명확하지 않는 모든 것을 거절 기능 수행
+
+## 공유기 보안 : ssid(무선랜을 구분하는 식별자, 무선단마릭들은 동일한 ssid), 대다수가 공장 출하 시 패스워드를 그대로 사용
+와이파이를 해킹하고 사용자의 개인정보를 가로챔
+
+시스템관리-ssid 설정을 해줘야함-인증 및 암호화(wpa2psk+aes)를 선택, 암호 교체
+채널 검색 : 2.4ghz면 13개의 채널이 있다(동적ㅊ널변경 기능을 하면 특정 시간마다 최적의 채널을 사용하도록 함)
+인터넷 설정 정보-dns 서버 수동 입력을 체크하면 파밍을 할 수 있음
+관리자 설정 : 관리자 계정 수정
+iptime 알림이=보안 검사기 실행(원격 관리 포트 개방 여부, 텔넷 포트 개방 여부, 수동 dns 설정 여부, wan 포트 mac 주소 여부, vpn 서버 실행 여부, DDNS 설정 여부, 시스템 로그 설정 여부, 관리자 페이지 계정 및 암호 안전성 여부, 무선네트워크 암호 설정 여부 등)
+
+
+
+
+
+## 11장
+### 사회공학기법 : 실제 악성메일을 열어 파일서버에 감염되고 개인정보 취급자가 접속을 해 개인정부 유출
+### 지능형지속위협
+
+### 리눅스 계정 : /etc/passwd 기본정보파일, /etc/shadow : 패스워드, 정책, /etc/group 그룹 기본 정보 파일, /etc/login.defs 사용자 전체를 제안하기 위한 설절ㅇ 파일, /etc/skel : 해당 계정의 홈디렉토리를 복사하는 파일, 디렉토리
+
+### /etc/passwd 기본정보파일 : 사용자계정 : 저장위치 사용자 UID(관리자는 0, 일반 사용자는 500부터), 그룹 아이디(관리자는 0), 계정이름, 홈디레고리 설정, 사용자 쉘 정의
+
+### /etc/shadow파일 : 암호화된 계정 패스워드 및 정책 저장(관리자만 볼 수 있음)
+계정 : $1#$ = md5, #5# =  sha256 등 , 패스워드 바꾼 날, 패스워드 바구고자 하는 최소 일수, 패스워드 안바꿔도 되는 일수,   언제 바꾸라고 할지 , 사용자의 쉘 정의, 마지막 날짜(계장만기일), 안쓰는거
+authconfig를 사용하여 알고리즘 확인, 변경
+
+### 리눅스 계정 
+계정 생성하면 계정관련 파일이 자동으로 생성
+계정 변경 chage
+계정 삭제할땐 다 삭제해야함, 전부 다 삭제는 userdel-rf 
+grep id로 계정 확인
+etc/login.defs에 계정에 관한 내용들
+
+### 리눅스 방화벽
+systemctl start firewalld
+systemctl status firewalld.service 동작확인
+systemctl stop firewalld 종료
+firewall-cmd --permanent --zone --public add-port= 포트번호 (특정 포트 개방)
+firewall-cmd --reload 적용
+firewall-cmd --permanent --zone --public remove-port= 포트번호 (특정 포트 차단)(reload해야 적용됨)
+firewall-cmd --zone=public --list-services 서비스 목록 확인
+firewall-cmd --status 상태확인
+
+### pc보안(매달 세번째주 수요일은 사이버 안전진단의 날) ahnlab과 알약의 내pc지키미 등이 있다
+windows보안-보안 한눈에 보기-바이러스 및 위험방지, 앱 및 브라우저 컨트롤
+화면보호기 설정(없음 말고 선택), usb메모리 차단
+레지스트리(설정 모아둔 것) 백업을 받아놓고 해야함
+
+### 숨겨진 공유폴더 해제
+$표시가 되어있음 필요없는건 삭제하는게 좋을지도?
+제어판-보안-관리도구-컴퓨터관리-공유폴더-공유-공유중지
+관리자cmd에서 net share c$ /delete  이것들은 컴퓨터를 껐다키면 복구됨
+영구적인건 레지스트리에서 currentcontrol-parameter-autsharewks값이 0인걸로 추가하면 없어짐
+
+### 비밀번호
+안정성 체크 : how secure is my password
+암호변경을 하자
+제어판-보안-관리도구-보안정책-암호정책, 계정 잠금정책 수정
+계정 잠금정책(임계값, 잠금 기간 등)
+크래킹 : 예상 id와 비밀번호를 무차별 공격(부르트포스)
+ssh 서비스 스캔 공격 : 패스워드 크래킹 툴(brutus aet2)사용
+주소, 서비스, 시작, 종료, 포트번호, 예측 id 목록, 예측 pw 목록, 옵션으로 (Modify Sequence)규칙성 설정
+
+## 12장
+
+윈도우 자동 로그인 해제(사용자계정에서)
+게스트 계정 비활성화(로컬 그룹 정책 편집기-윈도우설정-보안설정-로컬정책-보안옵션-게스트계정상태 해제)
+익명 엑세스 비활성화(로컬 그룹 정책 편집기-윈도우설정-보안설정-로컬정책-보안옵션-익명엑세스 관련 값 삭제)
+자동 업데이트(로컬 그룹 정책 편집기-컴퓨터구성-관리 템플릿-윈도우 구성요소-자동업데이트 ex)날짜 선정)
+방화벽 사용, 기능허용에서 필요한건 허용 설정
+인바운드, 아웃바운드 방향이 딱 정해진건 아니고 들어오는 트래픽==인바운드 나가는 트래픽==아웃바운드
+방화벽 : 공용, 개인, 도메인
+핑 사용 설정(시스템 및 보안-방화벽-고급-인바운드 규칙)에서 설정
+네트워크 쉘을 이용한 윈도우 방화벽 설정 : 관리자권한cmd에 입력하면 즉시 적용
+
+스마트폰 2007년 처음 만들어지고 0.5버전 안드로이드 만들어짐, 2008년 안드로이드1.0 만듬
+2011년 안드로이드 2.0 삼성s, 2012년 lg옵티머스 안드로이드 4.0, 등등
+
+## 13장
+서비스 보안
+
+### 엑티브 콘텐트(ActiveX)
+마이크로소프트, 인터넷 익스플로러에서만 동작(코드 실행의 제약이 적어 보안에 취약) 2020년 activex 퇴출 그대신 html5 사용
+엑티브엑스 설치현황 : nprotect netizen(개인정보 유출 차단), inisafeweb(데이터 암호화, 전자서명) 등 다양했다
+제거 : 알약-환경설정-pc관리-activex 정리->pc최적화
+
+### 코드서명용 인증서
+정당한 제작자에 의해 제작되었고 위,변조 되지 않았음을 증명
+배포시 프로그램의 정보를 확인해 설치할 수 있게 함
+소프트웨어와 전자서명을 배포하면서 동시에 공개킼가 포함된 코드서명용 인증서도 함께 배포(파일 단위로 서명, 한번 발급받으면 유효기간 내에 계속 사용할 수 있음)
+코드서명 탈취공격 : 코드서명 개인키를 탈취(해킹)해 이걸로 악성프로그램을 만들어 홈페이지서버에 설치
+홈페이지에 접속을 하면 악성프로그램 배포됨
+
+### 쿠키, 세션
+http 특성 : 비연결지향(요청, 응답에만 연결 유지), 상태정보유지안함(통신이 끝나면 상태를 유지하지 않음)
+이걸 보안하기 위해 쿠키, 그것보다 보안에 안전한 세션
+한번 로그인 하면 로그인이 되는 그런 느낌?
+쿠키는 5가지 구성요소,(이름, 도메인이름, espire(언제가지 유효한지), path경로, secure)
+#### 쿠키 생성 : 로그인을 하면은 id, 접속시간, ip주소 등으로 쿠키 문자열 생성(set cookie에 담아서) 이러면 다음에 로그인을 하면 받은 쿠키 아이디로 보낸거랑 매칭을 해 사용하게 함
+쿠키는 텍스트파일, 쿠키 정보를 이용해 웹사이트는 사용자 정보를 수집(공용 pc에서는 로그아웃이나 사용기록, 쿠키를 삭제해야함)
+쿠키를 활용한 도용시나리오
+크롬 확장프로그램(editthiscookie) 설치- a 컴퓨터에서 쿠키 내보내기, 클립보드 복사, 로그아웃을 함- 다른 컴퓨터에 쿠키 변경사항 적용하면 로그인이 됨
+#### 세션
+쿠키는 클라이언트(브라우저)에 파일 저장, 최대 300개, 도메인당 20개 컴퓨터를 해킹당하면 개인정보 위험
+세선 : 세션은 서버에 저장, 저장공간 필요, 서버 과부하 줄 수 있음
+#### 세션 생성 : 로그인을 하면 문자열을 전달-다음에 로그인을 할 때 세션 아이디를 달고 와 쿠키 아이디와 세션이 같은지 비교를 해 응답을 줌
+
+### 웹 브라우저 악성사이트 차단(clcoudopt adblocker)크롬 프로그램 추가-보안-설정
+### owasp(open web application security project) 소프트웨어 안전, 보안에 대한 가시성, 진화를 주도하는 역할 4년마다 발표
+2017 인젝션, 취약한 인증, 민감한 데이터 노출, xml 외부 개체, 취약한 접근 통제, 잘못된 보안 구성, 크로스 사이트 스크립팅, 안전하지 않은 역직렬화, 알려진 취약점이 있는 구성요소, 불충분한 로깅 및 모니터링
+
+#### sql 인젝션 공격 : sql인젝션 공격-세션 아이디 탈취-관리자권한으로 세션변조 공격-메뉴를 이용해 개인정보 유출 100만건 
+#### 웹쉘 공격 : asp, jsp, 서버사이드스크립트에서 일어남 ->실행을 하면 악성코드 유포 
+최근 웹 해킹의 대다수가 웹셀을 통한 공격(파일 업로드 취약점 제거, 업로드 전용 폴더를 만들어서 해결)
+#### xss: 클라이언트를 공격하기 위해 하는거
+게시판에 악성 스크립트를 저장-url을 노출시킴-접속을 하면 악성코드 동작
+#### reflected xss : 악성 url을 노출->웹사이트와 민감한 정보를 바로 응답이 넘어감 그걸 받음
+예방은 필터링, 유효성검사작업
+#### 크로스 사이트 요청 위조 : 사용자의 의지와는 무관하게 특정웹사이트에 요청하게 하는 공격
+관리자가 열게 게시물 등록-> 악성게시물 열람-> 스크립트 코드도 같이 실행-> 피해 발생
+
+점검툴 : arachni
+
+전용메일 프로그램 : outlook express(저장공간 제약이 적음, 서버 방문이 필요없음)
+전용메일 지원 메일 서버와 메일 서버 사이에는 smtp 프로토콜이 동작
+
+웹 브라우저를 이용한 웹 메일 : 내용이 사용자 계정에 저장, 공간의 한계를 지님(전용프로그램 필요없음)
+스팸메일 : 모든 메일의 50% 이상(성인사이트, 홍보, 피싱 등)(중국, 미국, 독일, 베트남 순으로 많이 보냄)
+스팸메일 차단 : 콘텐트 필터링(내용을 읽어 필터링), 자동차단(발송형태, 전송방식을 판단해 차단)
+kisa-rbl(realtime blocking list) 
+차단기술 : 1차(실시간 블랙리스트) 2차(사용자 블랙리스트) 3차(컨텐츠 필터) 4차(학습패턴) 5차(백신)
+스팸메일 방지 : 차단 기능 활용, 수신거부의사전달, 대응센터에 신고
+
+암호화폐 : 블록체인기반 공개키 암호화 암호화폐(중앙기관이 없으며 p2p 기반의 분산시스템에 의해 거래가 이뤄지고 검증됨)
+4년마다 1블록당 비트코인이 반씩 줄어듬
+
+nonce값을 구하는게 채굴 하나식 대입해보면서 난스값을 찾으면 채굴이 되는거다
+
+헤더의 구성요소를 더한 후 sha-256을 2번 적용 완료도니 거래정보를 변경하려면 새로 만들어진 내용들을 다시 채굴해서 수정해야함
+그래서 거래정보의 변경은 현실적으로 불가능
+
+크립토재킹 : 공격자가 서버에 채굴 프로그램을 몰래 추가하고 실행되면서 공격자에게 암호화폐를 채굴
+클립보드 하이재커 : 비트코인 지갑주소는 영어 대소문자숫자가 섞인것 이걸 비슷한 지갑주소로 바꿔서 빼돌림
+
+## 14장 
+### 포렌식 : 범죄 사실을 규명하기 위해 각종 증거를 과학적으로 분석
+### 디지털포렌식 : 디지털 정보를 차장 분석하고 사실 관계를 규명하고 증명하는 기술(디스크 포렌식, 네트워크 포렌식, 시스템 포렌식 모바일 포렌식, 데이터베이스, 클라우드, 특수 포렌식 등 )
+
+### 네트워크 포렌식 : 패킷 분석, 로그 분석, 트래픽 흐름 등을 분석하여 디지털 증거의 수집과 해석
+분해-디스크 스기 방지 장치에 연결-분석시스템과 스기 방지 장치에 연결-분석-이미지화-이미지파일
+포렌식 퍼즐
+wireshark에서
+패킷비율 확인 statistic-protocol hierarchy
+tcp 필터링 : 23번째 레코드확인 follow-tcp stream 
+내용 확인 : show data as-raw-magic number 확인(jpeg 파일 : FF D8 FF E0), (docx 파일 : 50 4B 03 04)
+Hxd툴-분석-체크섬을 이용해 md5의 해시값 확인
+
+
+stmp필터링(user, pass확인), base64 디코딩
+
+포렌식원칙 : 정당성, 무결성, 연계보관성, 신속성, 재현
+7대 침해사고 대응 사고전준비-사고 탐지-초기대응-대응전략 체계화-(데이터수집, 데이터분분석)사건조사, 보고서작성
+디지털 팬데믹
+보안의 가장 중요한 것은 내부 네트워크 사용자와 트래픽에 대한 암묵적인 신뢰 
+제로 트러스트
+리비히의 최소량 법칙 : 보안에 있어 가장 큰 위협은 나다
+
+
+
+
+
+
+
+
+
+
+
+
+
